# eno

./: .gitignore  .mcp.json  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: how-it-works.html  index.html  style.css
examples/demo-vault/2 Projects/: Building a Research Workflow.md  Digital Garden Setup.md  Learning in Public.md
examples/demo-vault/2 Research Areas/: Attention Residue and Context Switching.md  Information Foraging Theory.md  Map of Content - Learning.md  Mental Models and Decision Making.md  Personal Knowledge Management.md  Spaced Repetition.md  Synthesis - Spaced Repetition and Active Recall.md  Systems Thinking.md  The Forgetting Curve and Memory Consolidation.md
examples/demo-vault/5 Tools and Techniques/: Active Recall.md  Commonplace Book.md  Inbox Zero.md  Marginalia.md  Pomodoro Timer.md  Progressive Summarization.md  The Feynman Technique.md  Time Blocking.md  Zettelkasten.md
examples/demo-vault/8 People/: Future Self.md  Weaver.md
examples/demo-vault/z Daily Notes/: 2026-06-28.md  2026-07-09.md  2026-07-13.md
scripts/: check_release_gate.py  smoke_mcp.py
