[project]
name = "eno-workspace"
version = "0.2.0"
description = "eno — structural intelligence layer for an Obsidian vault (workspace root)"
authors = [{ name = "Marc Lavallee" }]
requires-python = ">=3.12"

[tool.uv.workspace]
members = ["packages/*"]
exclude = ["packages/eno-plugin"]  # TypeScript package, not a Python member

[tool.uv.sources]
enowiki = { workspace = true }
eno-service = { workspace = true }
eno-mcp = { workspace = true }
# Future workspace members; uncomment as packages land.
# eno-skill = { workspace = true }
# eno-agent = { workspace = true }
# somm is pulled from PyPI by the `enowiki[llm]` extra (fold + tiling). It is NOT a
# workspace/path source: a published checkout must resolve it like any other
# third-party dependency.

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "httpx>=0.27",  # FastAPI TestClient
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's parameter helpers are the idiomatic way to declare query/path/body
# params in argument defaults; they are not the B008 mutable-default footgun.
extend-immutable-calls = ["fastapi.Query", "fastapi.Depends", "fastapi.Path", "fastapi.Body"]

[tool.pytest.ini_options]
testpaths = ["packages"]
python_files = ["test_*.py"]
addopts = "-ra --import-mode=importlib"
